--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="airbnb logo" />
+        <svg>
+            <image href="images/logo.png" />
+        </svg>
     </header>
     <footer>Best School</footer>
 </body>
