--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="airbnb logo" />
+        <svg>
+            <image href="images/logo.png" />
+        </svg>
     </header>
     <div class="container">
         <section class="filters">
