--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -12,7 +12,9 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="airbnb logo" />
+        <svg>
+            <image href="images/logo.png" />
+        </svg>
     </header>
     <div class="container">
         <section class="filters">
@@ -58,15 +60,21 @@
                 </div>
                 <div class="information">
                     <div class="icons max_guest">
-                        <img src="images/icon_group.png" />
+                        <svg>
+                            <image href="images/icon_group.png" />
+                        </svg>
                         <p>2 Guests</p>
                     </div>
                     <div class="icons number_rooms">
-                        <img src="images/icon_bed.png" />
+                        <svg>
+                            <image href="images/icon_bed.png" />
+                        </svg>
                         <p>1 Bedroom</p>
                     </div>
                     <div class="icons number_bathrooms">
-                        <img src="images/icon_bath.png" />
+                        <svg>
+                            <image href="images/icon_bath.png" />
+                        </svg>
                         <p>1 Bathroom</p>
                     </div>
                 </div>
@@ -84,15 +92,21 @@
                 </div>
                 <div class="information">
                     <div class="icons max_guest">
-                        <img src="images/icon_group.png" />
+                        <svg>
+                            <image href="images/icon_group.png" />
+                        </svg>
                         <p>4 Guests</p>
                     </div>
                     <div class="icons number_rooms">
-                        <img src="images/icon_bed.png" />
+                        <svg>
+                            <image href="images/icon_bed.png" />
+                        </svg>
                         <p>2 Bedroom</p>
                     </div>
                     <div class="icons number_bathrooms">
-                        <img src="images/icon_bath.png" />
+                        <svg>
+                            <image href="images/icon_bath.png" />
+                        </svg>
                         <p>1 Bathroom</p>
                     </div>
                 </div>
@@ -110,16 +124,22 @@
                 </div>
                 <div class="information">
                     <div class="icons max_guest">
-                        <img src="images/icon_group.png" />
-                        <p>2 Guests</p>
+                        <svg>
+                            <image href="images/icon_group.png" />
+                        </svg>
+                        <p>6 Guests</p>
                     </div>
                     <div class="icons number_rooms">
-                        <img src="images/icon_bed.png" />
-                        <p>1 Bedroom</p>
+                        <svg>
+                            <image href="images/icon_bed.png" />
+                        </svg>
+                        <p>3 Bedroom</p>
                     </div>
                     <div class="icons number_bathrooms">
-                        <img src="images/icon_bath.png" />
-                        <p>1 Bathroom</p>
+                        <svg>
+                            <image href="images/icon_bath.png" />
+                        </svg>
+                        <p>3 Bathroom</p>
                     </div>
                 </div>
                 <div class="user">
@@ -131,7 +151,6 @@
             </article>
         </section>
     </div>
-    
     <footer>Best School</footer>
 </body>
 </html>
